package ConreteClasses;

import abstractclasses.AbstractUserInterface;

public class ConcreteUserInterface extends AbstractUserInterface {
    @Override
    public void displayBoard() {

    }

    @Override
    public void displayMessage() {

    }

    @Override
    public void getPlayerMove() {

    }
}
